After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658981 - Inability to effectively clear string indicator in stf import.
Inability to effectively clear string indicator in stf import.
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export Text
git master
Other Linux
: Normal normal
: ---
Assigned To: Morten Welinder
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2011-09-13 18:58 UTC by Andreas J. Guelzow
Modified: 2011-09-28 22:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screen shot for #1 (8.81 KB, image/png)
2011-09-14 17:43 UTC, Andreas J. Guelzow
Details

Description Andreas J. Guelzow 2011-09-13 18:58:48 UTC
Opening the configurable text importer yields:

(gnumeric:27892): Gtk-CRITICAL **: gtk_bin_get_child: assertion `GTK_IS_BIN (bin)' failed

(gnumeric:27892): GLib-GObject-WARNING **: invalid (NULL) pointer instance

(gnumeric:27892): GLib-GObject-CRITICAL **: g_signal_connect_data: assertion `G_TYPE_CHECK_INSTANCE (instance)' failed

(gnumeric:27892): GLib-GObject-WARNING **: /build/buildd/glib2.0-2.28.6/./gobject/gsignal.c:2275: signal `expose_event' is invalid for instance `0x8a6dad8'
Comment 1 Andreas J. Guelzow 2011-09-13 20:19:12 UTC
Back trace for the first warning:

  • #0 g_log
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #1 g_return_if_fail_warning
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #2 gtk_bin_get_child
    at /build/buildd/gtk+3.0-3.0.8/./gtk/gtkbin.c line 298
  • #3 stf_dialog_csv_page_init
    at dialog-stf-csv-page.c line 240
  • #4 stf_dialog
    at dialog-stf.c line 293
  • #5 stf_read_workbook
    at stf.c line 241
  • #6 go_file_opener_open_real
    at file.c line 84
  • #7 go_file_opener_open
    at file.c line 299

Comment 2 Andreas J. Guelzow 2011-09-13 20:23:49 UTC
We have
	pagedata->csv.csv_textindicator   = go_gtk_builder_get_widget (gui, "csv_textindicator");
	pagedata->csv.csv_textfield       = GTK_ENTRY    (gtk_bin_get_child (GTK_BIN (pagedata->csv.csv_textindicator)));

but I don't find a "csv_textindicator" in any ui file.
Comment 3 Andreas J. Guelzow 2011-09-13 20:29:32 UTC
Hmm, in dialog-stf.ui we have a GtkListStore csv-textindicator-list which doesn't seem to be used. It seems that there the  csv_textindicator widget (probably a combobox of some sort) was deleted.
Comment 4 Andreas J. Guelzow 2011-09-13 20:34:02 UTC
Apparently we had there a GtkComboBoxEntry. This should now be a "GtkComboBox with Entry".
Comment 5 Andreas J. Guelzow 2011-09-13 21:06:11 UTC
Partial fix committed. We are left with:

1)
gnumeric:27892): GLib-GObject-WARNING **:
/build/buildd/glib2.0-2.28.6/./gobject/gsignal.c:2275: signal `expose_event' is
invalid for instance `0x8a6dad8'

2)
The initial string indicator is not shown

3)
No custom indicator is set since the entry is disabled
Comment 6 Andreas J. Guelzow 2011-09-13 23:04:30 UTC
Note that #1 is due to the fact that the expose-event signam for GtkWidgets has disappeared in Gtk3.
Comment 7 Andreas J. Guelzow 2011-09-14 04:41:17 UTC
#2 is fixed

Note that #1 implies that on the separator tab, the vertical line to indicate where a separator would be placed is also missing.
Comment 8 Morten Welinder 2011-09-14 05:22:37 UTC
#1 is from hooking up cb_treeview_expose in dialog-stf-fixed-page.c

This is where we draw a red vertical line to indicate where a double-click
will split.  I imagine we need to hook this up to the draw signal or some
such nowadays.
Comment 9 Morten Welinder 2011-09-14 14:46:02 UTC


  • #1 fixed.

Comment 10 Andreas J. Guelzow 2011-09-14 16:49:48 UTC
We are left with #3:

Inability to set custom string indicators in stf import.

retitling.
Comment 11 Andreas J. Guelzow 2011-09-14 17:42:37 UTC
I note there is still a small problem remaining from #1:

If I double click to create a separation I end up with an extra line in the header that remains for some time. I get the same extra line on some focus changes between Gnumeric and other applications. I will be attaching a screen shot to show that extra line.
Comment 12 Andreas J. Guelzow 2011-09-14 17:43:10 UTC
Created attachment 196528 [details]
screen shot for #1
Comment 13 Morten Welinder 2011-09-14 17:56:45 UTC
I see the problem of comment 12 too.

We don't get movement and/or draw events when the cursor moves within
the header.
Comment 14 Andreas J. Guelzow 2011-09-15 05:28:32 UTC
The problem of comment 12 was fixed by Morten, so only the 

"Inability to set custom string indicators in stf import" remains in this bug.
Comment 15 Andreas J. Guelzow 2011-09-15 05:58:16 UTC
You can now set the custom string indicator in stf import.

Unfortunately if you delete the string indicator in the dialog then still the last set indicator is used. (This is the same behaviour as in gtk2 days.)
Comment 16 Andreas J. Guelzow 2011-09-28 22:06:44 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.