treeview: Return FALSE from draw handler

... like every widget should.

https://bugzilla.gnome.org/show_bug.cgi?id=658981